# tkx

./: .gitignore  LICENSE  README.md  SECURITY.md  main.css  main.py  pyproject.toml  setup.py
.github/: .gitattributes  CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  class-error.yml  design-flaw.yml  error-class.yml  error-other.yml  feature-request.yml  gui-result.yml  method-error.yml  other-error.yml
docs/: _config.yaml  index.md
example/: main.css  main.py
src/tkx/: __init__.py  constants.py  core.py  element.py  error.py  stylesheet.py  window.py
tks/: __init__.py  class_list.py  constants.py  core.py  dbg.py  element.py  stylesheet.py  window.py
