[tool.poetry]
name = "tkx"
version = "0.1.0"
description = ""
authors = ["Hunter Logan <_@piccoloser.com>"]
readme = "README.md"
packages = [{include = "tkx", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
